Add Pictures and Change Their  Sizes

--- a/index.html
+++ b/index.html
@@ -68,27 +68,26 @@
 					<!-- Education -->
 						<section id="education">
 							<div class="container">
-								<h3>A Few Accomplishments</h3>
-								<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum integer. Integer eu ante ornare amet commetus.</p>
+								<h3>Education</h3>
 								<div class="features">
 									<article>
-										<a href="#" class="image"><img src="images/tsinghua.png" alt="" /></a>
+										<a href="#" class="image"><img src="images/Tsinghua.png" alt="" /></a>
 										<div class="inner">
-											<h4>Possibly broke spacetime</h4>
+											<h4>Tsinghua University</h4>
 											<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
 										</div>
 									</article>
 									<article>
-										<a href="#" class="image"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="#" class="image"><img src="images/Stanford.png" alt="" /></a>
 										<div class="inner">
-											<h4>Terraformed a small moon</h4>
+											<h4>Stanford University</h4>
 											<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
 										</div>
 									</article>
 									<article>
-										<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+										<a href="#" class="image"><img src="images/ICL.png" alt="" /></a>
 										<div class="inner">
-											<h4>Snapped dark matter in the wild</h4>
+											<h4>Imperial College London</h4>
 											<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
 										</div>
 									</article>
