--- a/index.html
+++ b/index.html
@@ -30,13 +30,12 @@
 					</header>
 					<nav id="nav">
 						<ul>
-							<li><a href="#about" class="active">About</a></li>
-							<li><a href="#about">Education</a></li>
-							<li><a href="#about">Publications and Patents</a></li>
-							<li><a href="#about">Research Experiences</a></li>
-							<li><a href="#about">Honors and Awards</a></li>
-							<li><a href="#about">Skills</a></li>
-							<li><a href="#about">Contact</a></li>
+							<li><a href="#About" class="active">About</a></li>
+							<li><a href="#Education">Education</a></li>
+							<li><a href="#Publications">Publications</a></li>
+							<li><a href="#Research">Research</a></li>
+							<li><a href="#Honors">Honors</a></li>
+							<li><a href="#Skills">Skills</a></li>
 						</ul>
 					</nav>
 					<footer>
@@ -54,19 +53,18 @@
 				<div id="main">
 
 					<!-- About -->
-						<section id="about">
+						<section id="About">
 							<div class="container">
 								<header class="major">
-									<h2>About Bai Liu</h2>
-									<p>Just an incredibly simple responsive site<br />
-									template freebie by <a href="http://html5up.net">HTML5 UP</a>.</p>
+									<h2>Bai Liu (刘柏)</h2>
+									<p>liubaichn@126.com</p>
 								</header>
 								<p>Faucibus sed lobortis aliquam lorem blandit. Lorem eu nunc metus col. Commodo id in arcu ante lorem ipsum sed accumsan erat praesent faucibus commodo ac mi lacus. Adipiscing mi ac commodo. Vis aliquet tortor ultricies non ante erat nunc integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer non. Adipiscing cubilia elementum.</p>
 							</div>
 						</section>
 
 					<!-- Education -->
-						<section id="education">
+						<section id="Education">
 							<div class="container">
 								<h3>Education</h3>
 								<div class="features">
@@ -74,20 +72,84 @@
 										<a href="#" class="image"><img src="images/Tsinghua.png" alt="" /></a>
 										<div class="inner">
 											<h4>Tsinghua University</h4>
-											<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+											Aug. 2013 - Jul. 2017 (Expected)
+											<br>Department of Automation
+											<br>Bachelor of Engineering
+											<br>GPA: 93 / 100 &nbsp Ranking: <strong>1<sup>st</sup> / 145</strong>
 										</div>
 									</article>
 									<article>
 										<a href="#" class="image"><img src="images/Stanford.png" alt="" /></a>
 										<div class="inner">
 											<h4>Stanford University</h4>
-											<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+											Jun. 2016 - Sept. 2016
+											<br>Department of Electrical Engineering
+											<br>Undergraduate Visiting Researcher (UGVR) Program
 										</div>
 									</article>
 									<article>
 										<a href="#" class="image"><img src="images/ICL.png" alt="" /></a>
 										<div class="inner">
 											<h4>Imperial College London</h4>
+											Jan. 2016 - Mar. 2016
+											<br>Intelligent Transportation Systems Laboratory
+											<br>Undergraduate Visiting Research Assistant 
+										</div>
+									</article>
+								</div>
+							</div>
+						</section>
+
+					<!-- Publications -->
+						<section id="Publications">
+							<div class="container">
+								<h3>Publications</h3>
+								<h4>Paper</h4>
+									<ul>
+										<li><strong>Bai Liu</strong>, Jianming Hu, Pan Gao, and Xudong Xie, "Dynamic Traffic Guidance Generating Method on Variable Message Sign in Small and Medium-Sized Cities", <i>14<sup>th</sup> ITS Asia Pacific Forum</i>. Full version accepted. Invited to do oral presentation.</li>
+										<li>	Ke Han, <strong>Bai Liu</strong>, and Jianming Hu, "Global optimization framework for real-time route guidance via variable message sign", <i>Transportmetrica A</i>, submitted.</li>
+									</ul>
+								<h4>Patent</h4>
+									<ul>
+										<li>Jianming Hu, Xin Pei, <strong>Bai Liu</strong>, "An Information Distribution Method of Variable Message Sign Based on Prediction Method", Chinese Invention Patent. Application ID: 201510768010.4. Date: 2015.11.12.</li>
+									</ul>
+								<h4>Software Copyright</h4>
+									<ul>
+										<li>"Intelligent Networking Transportation Guidance System Platform [INGSP] V1.0", Computer Software Copyright. Registration No.:2016SR252223. Date: 2016.06.01.</li>
+									</ul>
+							</div>
+						</section>
+
+					<!-- Research -->
+						<section id="Research">
+							<div class="container">
+								<h3>Research</h3>
+								<div class="features">
+									<article>
+										<a href="#" class="image"><img src="images/Stanford_Research.png" alt="" /></a>
+										<div class="inner">
+											<h4>Subnetwork Selection of Gaussian Relay Network</h4>
+											<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+										</div>
+									</article>
+									<article>
+										<a href="#" class="image"><img src="images/Tsinghua_Research(Optimization).png" alt="" /></a>
+										<div class="inner">
+											<h4>Management Scheme of Auto-Driving Vehicles</h4>
+											<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+										</div>
+									</article>
+									<article>
+										<a href="#" class="image"><img src="images/ICL_Research.jpg" alt="" /></a>
+										<div class="inner">
+											<h4>Dynamic Transportation Network Modeling</h4>
+											<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
+										</div>
+									</article>
+									<article>
+										<a href="#" class="image"><img src="images/Tsinghua_Research(Transportation).jpg" alt="" /></a>
+										<div class="inner">
+											<h4>Dynamic Traffic Guidance Scheme Design</h4>
 											<p>Integer eu ante ornare amet commetus vestibulum blandit integer in curae ac faucibus integer adipiscing ornare amet.</p>
 										</div>
 									</article>
@@ -95,14 +157,58 @@
 							</div>
 						</section>
 
+					<!-- Honors -->
+						<section id="Honors">
+							<div class="container">
+								<h3>Honors</h3>
+								<h4>Fellowships</h4>
+									<ul>
+										<li><strong>Fellowship of Stanford Undergraduate Visiting Researcher Program</strong> &nbsp 2016
+											<br>Top undergraduate research program, only 18 students in China are selected annually</br> </li>
+										<li><strong>Fellowship of Spark Talents Program</strong> &nbsp 2015
+											<br>Awarded to the top 50 Tsinghua students, dedicated to scientific and technological innovations</br> </li>
+									</ul>
+								<h4>Scholarships</h4>
+									<ul>
+										<li><strong>"Qualcomm" Scholarship</strong> &nbsp 2016
+											<br>Awarded to students with scientific potential, only 50 students among all undergraduates in Tsinghua University are selected</br> </li>
+										<li><strong>"Fang Chongzhi" Scholarship</strong> &nbsp 2015
+											<br>Highest honor for students in the Department of Automation, only one student is selected annually</br> </li>
+										<li><strong>China National Scholarship</strong> &nbsp 2014
+											<br>Highest level of scholarship set by the government of China</br> </li>
+									</ul>
+								<h4>Awards</h4>
+									<ul>
+										<li><strong>2<sup>nd</sup> Prize of 33<sup>rd</sup> Challenge Cup</strong> &nbsp 2014
+											<br>Top scientific research contest in Tsinghua University</br> </li>
+										<li><strong>2<sup>nd</sup> Prize of 9<sup>th</sup> Intelligent Transportation Contest</strong> &nbsp 2014
+											<br>Top contest of intelligent transportation in Tsinghua University</br> </li>
+										<li><strong>1<sup>st</sup> Prize of National Mathematical Olympiad</strong> &nbsp 2012</li>
+										<li><strong>2<sup>nd</sup> Prize of National Physics  Olympiad</strong> &nbsp 2012</li>
+									</ul>
+							</div>
+						</section>
+
+					<!-- Skills -->
+						<section id="Skills">
+							<div class="container">
+								<h3>Skills</h3>
+								<ul>
+								<i class="fa fa-code fa-2x fa-fw"></i> &nbsp C/C++, Matlab, Mathematica, C#, Web programming	
+								<br><i class="fa fa-wrench fa-2x fa-fw"></i> &nbsp LaTeX, git, SQL, Oracle
+								<br><i class="fa fa-paint-brush fa-2x fa-fw"></i> &nbsp TOEFL iBT 107/120 (Reading 30, Listening 28, Speaking 23, Writing 26)
+								<br><i class="fa fa-pencil fa-2x fa-fw"></i> &nbsp GRE 324/340+3.5/6.0 (Verbal 154, Quantitive 170, Analytical Writing: 3.5)
+								</ul>
+							</div>
+						</section>
+
 				</div>
-						
 
 			<!-- Footer -->
 				<section id="footer">
 					<div class="container">
 						<ul class="copyright">
-							<li>&copy; Untitled. All rights reserved.</li><li>More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a></li>
+							<li>&copy; Bai Liu 2016</li>
 						</ul>
 					</div>
 				</section>
