--- a/index.html
+++ b/index.html
@@ -38,15 +38,6 @@
 							<li><a href="#Skills">Skills</a></li>
 						</ul>
 					</nav>
-					<footer>
-						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-							<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
-						</ul>
-					</footer>
 				</section>
 
 			<!-- Main -->
@@ -194,10 +185,10 @@
 							<div class="container">
 								<h3>Skills</h3>
 								<ul>
-								<i class="fa fa-code fa-2x fa-fw"></i> &nbsp C/C++, Matlab, Mathematica, C#, Web programming	
-								<br><i class="fa fa-wrench fa-2x fa-fw"></i> &nbsp LaTeX, git, SQL, Oracle
-								<br><i class="fa fa-paint-brush fa-2x fa-fw"></i> &nbsp TOEFL iBT 107/120 (Reading 30, Listening 28, Speaking 23, Writing 26)
-								<br><i class="fa fa-pencil fa-2x fa-fw"></i> &nbsp GRE 324/340+3.5/6.0 (Verbal 154, Quantitive 170, Analytical Writing: 3.5)
+								<i class="fa fa-code fa-2x fa-fw"></i> &nbsp C/C++ &nbsp Matlab &nbsp Mathematica &nbsp C# &nbsp Web programming	
+								<br><i class="fa fa-wrench fa-2x fa-fw"></i> &nbsp LaTeX &nbsp Git &nbsp SQL &nbsp Oracle
+								<br><i class="fa fa-paint-brush fa-2x fa-fw"></i> &nbsp <strong>TOEFL iBT</strong> 107/120 (Reading:30 Listening:28 Speaking:23 Writing:26)
+								<br><i class="fa fa-pencil fa-2x fa-fw"></i> &nbsp <strong>GRE</strong> 324/340+3.5/6.0 (Verbal:154 Quantitive:170 Analytical Writing:3.5)
 								</ul>
 							</div>
 						</section>
