--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 											Aug. 2013 - Jul. 2017 (Expected)
 											<br>Department of Automation
 											<br>Bachelor of Engineering
-											<br>GPA: 93 / 100 &nbsp Ranking: <strong>1<sup>st</sup> / 145</strong>
+											<br>GPA: <strong>93 / 100</strong> &nbsp Ranking: <strong>1<sup>st</sup> / 145</strong>
 										</div>
 									</article>
 									<article>
@@ -155,7 +155,7 @@
 								<h4>Fellowships</h4>
 									<ul>
 										<li><strong>Fellowship of Stanford Undergraduate Visiting Researcher Program</strong> &nbsp 2016
-											<br>Top undergraduate research program, only 18 students in China are selected annually</br> </li>
+											<br>Top undergraduate research program, only <strong>18</strong> students in China are selected annually</br> </li>
 										<li><strong>Fellowship of Spark Talents Program</strong> &nbsp 2015
 											<br>Awarded to the top 50 Tsinghua students, dedicated to scientific and technological innovations</br> </li>
 									</ul>
@@ -164,7 +164,7 @@
 										<li><strong>"Qualcomm" Scholarship</strong> &nbsp 2016
 											<br>Awarded to students with scientific potential, only 50 students among all undergraduates in Tsinghua University are selected</br> </li>
 										<li><strong>"Fang Chongzhi" Scholarship</strong> &nbsp 2015
-											<br>Highest honor for students in the Department of Automation, only one student is selected annually</br> </li>
+											<br>Highest honor for students in the Department of Automation, only <strong>one</strong> student is selected annually</br> </li>
 										<li><strong>China National Scholarship</strong> &nbsp 2014
 											<br>Highest level of scholarship set by the government of China</br> </li>
 									</ul>
