--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 								</header>
 								<p>I am currently a senior undergraduate student in <a href="http://www.au.tsinghua.edu.cn/publish/auen/index.html"><font color="3498DB">Department of Automation</font></a>, <a href="http://www.sist.tsinghua.edu.cn/docinfo_eng/index.jsp"><font color="3498DB">School of Information Science and Technology</font></a>, <a href="http://www.tsinghua.edu.cn/publish/newthuen/index.html"><font color="3498DB">Tsinghua University</font></a>. </p>
 
-								<p>Since Fall 2015, I have been working at <a href="http://iiis.tsinghua.edu.cn/en/"><font color="3498DB">Institute for Interdisciplinary Information Sciences</font></a>, advised by Prof. <a href="http://iiis.tsinghua.edu.cn/~huang/"><font color="3498DB">Longbo Huang</font></a>. In 2015, I worked in <a href="http://www.au.tsinghua.edu.cn/publish/auen/1344/index.html"><font color="3498DB">Institute of System Engineering</font></a>, advised by Prof. <a href="http://www.tsinghua.edu.cn/publish/auen/1713/2011/20111107134223455368964/20111107134223455368964_.html"><font color="3498DB">Jianming Hu</font></a>. In Spring 2016, I visited <a href="http://www.imperial.ac.uk"><font color="3498DB">Imperial College London</font></a> and worked at <a href="http://www.imperial.ac.uk/transport-studies/"><font color="3498DB">Centre for Transport Studies</font></a>, advised by Prof. <a href="http://www.imperial.ac.uk/people/k.han"><font color="3498DB">Ke Han</font></a>. In Summer 2016, I was fortunate enough to be selected into Stanford <a href="https://engineering.stanford.edu/students/programs/global-engineering-programs/chinese-ugvr"><font color="3498DB">UGVR</font></a> program and worked as a research assistant in <a href="http://isl.stanford.edu"><font color="3498DB"> Information Systems Laboratory</font></a>, advised by Prof. <a href="http://web.stanford.edu/~aozgur/"><font color="3498DB">Ayfer Özgür</font></a>.</p>
+								<p>Since Fall 2015, I have been working at <a href="http://iiis.tsinghua.edu.cn/en/"><font color="3498DB">Institute for Interdisciplinary Information Sciences</font></a>, advised by Prof. <a href="http://iiis.tsinghua.edu.cn/~huang/"><font color="3498DB">Longbo Huang</font></a>. In 2015, I worked in <a href="http://www.au.tsinghua.edu.cn/publish/auen/1344/index.html"><font color="3498DB">Institute of System Engineering</font></a>, advised by Prof. <a href="http://www.tsinghua.edu.cn/publish/auen/1713/2011/20111107134223455368964/20111107134223455368964_.html"><font color="3498DB">Jianming Hu</font></a>. In Spring 2016, I visited <a href="http://www.imperial.ac.uk"><font color="3498DB">Imperial College London</font></a> and worked at <a href="http://www.imperial.ac.uk/transport-studies/"><font color="3498DB">Centre for Transport Studies</font></a>, advised by Prof. <a href="http://www.imperial.ac.uk/people/k.han"><font color="3498DB">Ke Han</font></a>. In Summer 2016, I was fortunate enough to be selected into Stanford <a href="https://engineering.stanford.edu/students/programs/global-engineering-programs/chinese-ugvr"><font color="3498DB">UGVR</font></a> program and worked as a research assistant in <a href="http://isl.stanford.edu"><font color="3498DB">Information Systems Laboratory</font></a>, advised by Prof. <a href="http://web.stanford.edu/~aozgur/"><font color="3498DB">Ayfer Özgür</font></a>.</p>
 
 								<p>My research interests lie in information theory, operation research and intelligent transportation.</p>
 							</div>
@@ -78,7 +78,7 @@
 										<div class="inner">
 											<h4>Stanford University</h4>
 											Jun. 2016 - Sept. 2016
-											<br>Department of Electrical Engineering
+											<br><a href="http://ee.stanford.edu"><font color="3498DB">Department of Electrical Engineering</font></a>
 											<br>Undergraduate Visiting Researcher (<a href="https://engineering.stanford.edu/students/programs/global-engineering-programs/chinese-ugvr"><font color="3498DB">UGVR</font></a>) Program
 										</div>
 									</article>
@@ -87,7 +87,7 @@
 										<div class="inner">
 											<h4>Imperial College London</h4>
 											Jan. 2016 - Mar. 2016
-											<br>Intelligent Transportation Systems Laboratory
+											<br><a href="http://www.imperial.ac.uk/transport-studies/"><font color="3498DB">Centre for Transport Studies</font></a>
 											<br>Undergraduate Visiting Research Assistant 
 										</div>
 									</article>
