--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 													<a href="http://www.imperial.ac.uk/people/k.han"><font color="3498DB">Ke Han</font></a>
 												</h5>
 											</h4>
-											<p>We formulate transportation network model with VMS (variable message sign) feedback and traffic signal control. We then design control optimization algorithm with linear decision rule and heuristic optimization approach. A simulation case study is conducted on a real-world test network in China, which shows the advantage of the proposed adaptive VMS display strategy.</p>
+											<p>Aiming at improving VMS (variable message sign) display strategy, we formulate transportation network model with feedback scheme. We then design optimization algorithm with linear decision rule and heuristic optimization approach. A simulation case study is conducted on a real-world test network in China, which shows the advantage of the proposed adaptive VMS display strategy.</p>
 										</div>
 									</article>
 								</div>
