--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@
 								<h3>Publications</h3>
 								<h4>Paper</h4>
 									<ul>
+										<li><strong>Bai Liu</strong>, Ke Han, and Jianming Hu, "Global optimization framework for real-time route guidance via variable message sign", <i>Transportmetrica A</i>, under review.</li>
 										<li><strong>Bai Liu</strong>, Jianming Hu, Pan Gao, and Xudong Xie, "Dynamic Traffic Guidance Generating Method on Variable Message Sign in Small and Medium-Sized Cities", <i>14<sup>th</sup> ITS Asia Pacific Forum</i>. Full version accepted. Invited to do oral presentation.</li>
-										<li>	Ke Han, <strong>Bai Liu</strong>, and Jianming Hu, "Global optimization framework for real-time route guidance via variable message sign", <i>Transportmetrica A</i>, submitted.</li>
 									</ul>
 								<h4>Patent</h4>
 									<ul>
