Add link to LinkedIn

--- a/index.html
+++ b/index.html
@@ -69,7 +69,11 @@
 							<div class="container">
 								<header class="major">
 									<h2>Bai Liu (刘柏)</h2>
-									<p><a href="mailto:liubaichn@gmail.com  ">liubaichn@gmail.com</a> &nbsp <a href="files/CV_BaiLiu.pdf"><font color="3498DB">[CV]</font></a></p>
+									<p>
+										<a href="mailto:liubaichn@gmail.com  ">liubaichn@gmail.com</a> &nbsp 
+										<a href="files/CV_BaiLiu.pdf"><font color="3498DB">[CV]</font></a> &nbsp 
+										<a href="https://www.linkedin.com/in/bai-liu/"><font color="3498DB">[LinkedIn]</font></a> &nbsp 
+									</p>									
 								</header>
 								<p>I am currently a senior undergraduate student in <a href="http://www.au.tsinghua.edu.cn/publish/auen/index.html"><font color="3498DB">Department of Automation</font></a>, <a href="http://www.sist.tsinghua.edu.cn/docinfo_eng/index.jsp"><font color="3498DB">School of Information Science and Technology</font></a>, <a href="http://www.tsinghua.edu.cn/publish/newthuen/index.html"><font color="3498DB">Tsinghua University</font></a>. </p>
 
