--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
 								<p>Since Fall 2015, I have been working at <a href="http://iiis.tsinghua.edu.cn/en/"><font color="3498DB">Institute for Interdisciplinary Information Sciences</font></a>, advised by Prof. <a href="http://iiis.tsinghua.edu.cn/~huang/"><font color="3498DB">Longbo Huang</font></a>. In 2015, I worked in <a href="http://www.au.tsinghua.edu.cn/publish/auen/1344/index.html"><font color="3498DB">Institute of System Engineering</font></a>, advised by Prof. <a href="http://www.tsinghua.edu.cn/publish/auen/1713/2011/20111107134223455368964/20111107134223455368964_.html"><font color="3498DB">Jianming Hu</font></a>. In Spring 2016, I visited <a href="http://www.imperial.ac.uk"><font color="3498DB">Imperial College London</font></a> and worked at <a href="http://www.imperial.ac.uk/transport-studies/"><font color="3498DB">Centre for Transport Studies</font></a>, advised by Prof. <a href="http://www.imperial.ac.uk/people/k.han"><font color="3498DB">Ke Han</font></a>. In Summer 2016, I was fortunate enough to be selected into <a href="https://engineering.stanford.edu/students/programs/global-engineering-programs/chinese-ugvr"><font color="3498DB">Stanford UGVR program</font></a> and worked as a research assistant in <a href="http://isl.stanford.edu"><font color="3498DB">Information Systems Laboratory</font></a>, advised by Prof. <a href="http://web.stanford.edu/~aozgur/"><font color="3498DB">Ayfer Özgür</font></a>.</p>
 
 								<p>My research interests lie in network optimization, information theory and intelligent transportation.</p>
+
+								<p>News: I will join <a href="https://lids.mit.edu"><font color="3498DB">MIT LIDS</font></a> for graduate study and research in 2017 fall!</p>
 							</div>
 						</section>
 
