--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 										<a>bailiu [at] mit.edu</a> &nbsp 
 										<a href="files/CV_BaiLiu.pdf"><font color="3498DB">[CV]</font></a> &nbsp 
 										<a href="https://www.linkedin.com/in/bai-liu/"><font color="3498DB">[LinkedIn]</font></a> &nbsp 
-										<a href="https://github.com/lohasbai"><font color="3498DB">[GitHub]</font></a> &nbsp 
+										<a href="https://github.com/bailiumit"><font color="3498DB">[GitHub]</font></a> &nbsp 
 									</p>									
 								</header>
 								<p>I am currently a Ph.D. student in <a href="https://lids.mit.edu"><font color="3498DB">Laboratory for Information and Decision Systems (LIDS)</font></a>, <a href="http://web.mit.edu"><font color="3498DB">Massachusetts Institute of Technology</font></a>. </p>
