--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
 										<a href="https://github.com/bailiumit"><font color="3498DB">[GitHub]</font></a> &nbsp 
 									</p>									
 								</header>
-								<p>I am currently a Ph.D. student in <a href="https://lids.mit.edu"><font color="3498DB">Laboratory for Information and Decision Systems (LIDS)</font></a>, <a href="http://web.mit.edu"><font color="3498DB">Massachusetts Institute of Technology</font></a>. </p>
+								<p>I am currently a Ph.D. candidate in <a href="https://lids.mit.edu"><font color="3498DB">Laboratory for Information and Decision Systems (LIDS)</font></a>, <a href="http://web.mit.edu"><font color="3498DB">Massachusetts Institute of Technology</font></a>, advised by Prof. <a href="https://modiano.mit.edu"><font color="3498DB">Eytan Modiano</font></a>. </p>
 
 								<p>My research interests lie in learning and control problems in networked systems (data networks, logistic networks etc.), with application of reinforcement learning, stochastic optimization, inference methods.</p>
 
-								<p>Previously, in Summer 2016, I was fortunate enough to be selected into <a href="https://engineering.stanford.edu/students/programs/global-engineering-programs/chinese-ugvr"><font color="3498DB">Stanford UGVR program</font></a> and worked as a research assistant in <a href="http://isl.stanford.edu"><font color="3498DB">Information Systems Laboratory</font></a>, advised by Prof. <a href="http://web.stanford.edu/~aozgur/"><font color="3498DB">Ayfer Özgür</font></a>. In Spring 2016, I visited <a href="http://www.imperial.ac.uk"><font color="3498DB">Imperial College London</font></a> and worked at <a href="http://www.imperial.ac.uk/transport-studies/"><font color="3498DB">Centre for Transport Studies</font></a>, advised by Prof. <a href="http://www.imperial.ac.uk/people/k.han"><font color="3498DB">Ke Han</font></a>. In 2016, I worked at <a href="http://iiis.tsinghua.edu.cn/en/"><font color="3498DB">Institute for Interdisciplinary Information Sciences</font></a>, advised by Prof. <a href="http://iiis.tsinghua.edu.cn/~huang/"><font color="3498DB">Longbo Huang</font></a>. In 2015, I worked in <a href="http://www.au.tsinghua.edu.cn/publish/auen/1344/index.html"><font color="3498DB">Institute of System Engineering</font></a>, advised by Prof. <a href="http://www.tsinghua.edu.cn/publish/auen/1713/2011/20111107134223455368964/20111107134223455368964_.html"><font color="3498DB">Jianming Hu</font></a>.  </p>
+								<p>Previously, in Summer 2016, I was selected into <a href="https://engineering.stanford.edu/students/programs/global-engineering-programs/chinese-ugvr"><font color="3498DB">Stanford UGVR program</font></a> and worked as a research assistant in <a href="http://isl.stanford.edu"><font color="3498DB">Information Systems Laboratory</font></a>, advised by Prof. <a href="http://web.stanford.edu/~aozgur/"><font color="3498DB">Ayfer Özgür</font></a>. In Spring 2016, I visited <a href="http://www.imperial.ac.uk"><font color="3498DB">Imperial College London</font></a> and worked at <a href="http://www.imperial.ac.uk/transport-studies/"><font color="3498DB">Centre for Transport Studies</font></a>, advised by Prof. <a href="http://www.imperial.ac.uk/people/k.han"><font color="3498DB">Ke Han</font></a>. In 2016, I worked at <a href="http://iiis.tsinghua.edu.cn/en/"><font color="3498DB">Institute for Interdisciplinary Information Sciences</font></a>, advised by Prof. <a href="http://iiis.tsinghua.edu.cn/~huang/"><font color="3498DB">Longbo Huang</font></a>. In 2015, I worked in <a href="http://www.au.tsinghua.edu.cn/publish/auen/1344/index.html"><font color="3498DB">Institute of System Engineering</font></a>, advised by Prof. <a href="http://www.tsinghua.edu.cn/publish/auen/1713/2011/20111107134223455368964/20111107134223455368964_.html"><font color="3498DB">Jianming Hu</font></a>.  </p>
 							</div>
 						</section>
 
@@ -88,7 +88,6 @@
 								<h3>Publications</h3>
 								<h4>Paper</h4>
 									<ul>
-										<li><strong>Bai Liu</strong>, Jianming Hu, Pan Gao, and Xudong Xie. Dynamic Traffic Guidance Generating Method on Variable Message Sign in Small and Medium-Sized Cities. <i>14<sup>th</sup> ITS Asia Pacific Forum</i>. Full version accepted. Invited to do oral presentation.</li>
 										<li><strong>Bai Liu</strong>, Ke Han, and Jianming Hu. Global Optimization Framework for Real-time Route Guidance via Variable Message Sign. <i>Submitted to Transportmetrica A</i>. Currently under review. &nbsp <a href="http://arxiv.org/abs/1611.08343"><font color="3498DB">[arXiv]</font></a></li>  
 										<li><strong>Bai Liu</strong>, Xiugang Wu, and Ayfer Özgür. Efficiently Reaching the Largest Wireless Capacity with the Fewest Relays. <i>In preparation for submission.</i> &nbsp <a href="files/BaiLiu_UGVR_Poster.pdf"><font color="3498DB">[Poster]</font></a></li>
 									</ul>
@@ -109,11 +108,23 @@
 								<h3>Selected Research Projects</h3>
 								<div class="features">
 									<article>
+										<a href="#" class="image"><img src="images/RL_Research.png" alt="" /></a>
+										<div class="inner">
+											<h4>Reinforcement Learning in Network Control
+												<h5>Bai Liu, 
+													<a href="https://sites.google.com/site/qiaominxie/"><font color="3498DB">Qiaomin Xie</font></a>, 
+													<a href="https://modiano.mit.edu"><font color="3498DB">Eytan Modiano</font></a>
+												</h5>
+											</h4>
+											<p>By applying model-based reinforcement learning and Lyapunov analysis, we designe an algorithm for queueing networks with unbounded state spaces. We prove that under our algorithm, the average queue back- log can get arbitrarily close to the optimal result.</p>
+										</div>
+									</article>
+									<article>
 										<a href="files/BaiLiu_UGVR_Poster.pdf" class="image"><img src="images/Stanford_Research.png" alt="" /></a>
 										<div class="inner">
 											<h4>Subnetwork Selection of Gaussian Relay Network &nbsp <a href="files/BaiLiu_UGVR_Poster.pdf"><font color="3498DB">[Poster]</font></a>
 												<h5>Bai Liu,  
-													<a href="http://web.stanford.edu/~x23wu/"><font color="3498DB">Xiugang Wu</font></a>, 
+													<a href="https://www.eecis.udel.edu/~xwu/"><font color="3498DB">Xiugang Wu</font></a>, 
 													<a href="http://web.stanford.edu/~aozgur/"><font color="3498DB">Ayfer Özgür</font></a>
 												</h5>
 											</h4> 
@@ -121,7 +132,7 @@
 										</div>
 									</article>
 									<article>
-										<a href="#" class="image"><img src="images/ICL_Research.jpg" alt="" /></a>
+										<a href="http://arxiv.org/abs/1611.08343" class="image"><img src="images/ICL_Research.jpg" alt="" /></a>
 										<div class="inner">
 											<h4>Dynamic Transportation Network Modeling &nbsp <a href="http://arxiv.org/abs/1611.08343"><font color="3498DB">[arXiv]</font></a>
 												<h5>Bai Liu, 
