--- a/index.html
+++ b/index.html
@@ -88,8 +88,9 @@
 								<h3>Publications</h3>
 								<h4>Paper</h4>
 									<ul>
-										<li><strong>Bai Liu</strong>, Ke Han, and Jianming Hu. Global Optimization Framework for Real-time Route Guidance via Variable Message Sign. <i>Submitted to Transportmetrica A</i>. Currently under review. &nbsp <a href="http://arxiv.org/abs/1611.08343"><font color="3498DB">[arXiv]</font></a></li>  
-										<li><strong>Bai Liu</strong>, Xiugang Wu, and Ayfer Özgür. Efficiently Reaching the Largest Wireless Capacity with the Fewest Relays. <i>In preparation for submission.</i> &nbsp <a href="files/BaiLiu_UGVR_Poster.pdf"><font color="3498DB">[Poster]</font></a></li>
+										<li><strong>Bai Liu</strong>, Qiaomin Xie, and Eytan Modiano. Reinforcement Learning for Optimal Control of Queueing Systems. To present at <i>IEEE Allerton Conference</i>, September 2019.</li>
+										<li><strong>Bai Liu</strong>, Xiugang Wu, and Ayfer Özgür. Efficiently Reaching the Largest Wireless Capacity with the Fewest Relays. Presented at <i>Stanford UGVR Program Workshop</i>, August 2016. &nbsp <a href="files/BaiLiu_UGVR_Poster.pdf"><font color="3498DB">[Poster]</font></a></li>
+										<li><strong>Bai Liu</strong>, Ke Han, and Jianming Hu. Global Optimization Framework for Real-time Route Guidance via Variable Message Sign, May 2016. &nbsp <a href="http://arxiv.org/abs/1611.08343"><font color="3498DB">[arXiv]</font></a></li>  
 									</ul>
 								<h4>Patent</h4>
 									<ul>
