Update CV and content

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 								<h3>Publications</h3>
 								<h4>Paper</h4>
 									<ul>
-										<li><strong>Bai Liu</strong>, Qiaomin Xie, and Eytan Modiano. Reinforcement Learning for Optimal Control of Queueing Systems. To present at <i>IEEE Allerton Conference</i>, September 2019.</li>
+										<li><strong>Bai Liu</strong>, Qiaomin Xie, and Eytan Modiano. Reinforcement Learning for Optimal Control of Queueing Systems. <i>57th Annual Allerton Conference on Communication, Control, and Computing</i>, September 2019.</li>
 										<li><strong>Bai Liu</strong>, Xiugang Wu, and Ayfer Özgür. Efficiently Reaching the Largest Wireless Capacity with the Fewest Relays. Presented at <i>Stanford UGVR Program Workshop</i>, August 2016. &nbsp <a href="files/BaiLiu_UGVR_Poster.pdf"><font color="3498DB">[Poster]</font></a></li>
 										<li><strong>Bai Liu</strong>, Ke Han, and Jianming Hu. Global Optimization Framework for Real-time Route Guidance via Variable Message Sign, May 2016. &nbsp <a href="http://arxiv.org/abs/1611.08343"><font color="3498DB">[arXiv]</font></a></li>  
 									</ul>
@@ -117,7 +117,7 @@
 													<a href="https://modiano.mit.edu"><font color="3498DB">Eytan Modiano</font></a>
 												</h5>
 											</h4>
-											<p>By applying model-based reinforcement learning and Lyapunov analysis, we designe an algorithm for queueing networks with unbounded state spaces. We prove that under our algorithm, the average queue back- log can get arbitrarily close to the optimal result.</p>
+											<p>By applying model-based reinforcement learning and Lyapunov analysis, we designe an algorithm for queueing networks with unbounded state spaces. We prove that under our algorithm, the average queue backlog can get arbitrarily close to the optimal result.</p>
 										</div>
 									</article>
 									<article>
@@ -152,7 +152,7 @@
 							<div class="container">
 								<h3>Skills</h3>
 								<ul>
-								<i class="fa fa-code fa-2x fa-fw"></i> &nbsp MATLAB (>20k lines) &nbsp C/C++ (>20k lines) &nbsp Wolfram &nbsp C# (>10k lines) &nbsp HTML/CSS
+								<i class="fa fa-code fa-2x fa-fw"></i> &nbsp Python &nbsp MATLAB &nbsp C/C++ &nbsp Wolfram
 								<br><i class="fa fa-wrench fa-2x fa-fw"></i> &nbsp LaTeX &nbsp Git &nbsp SQL &nbsp Oracle
 <!-- 								<br><i class="fa fa-paint-brush fa-2x fa-fw"></i> &nbsp <strong>TOEFL iBT</strong> 107/120 (Reading:30 Listening:28 Speaking:23 Writing:26)
 								<br><i class="fa fa-pencil fa-2x fa-fw"></i> &nbsp <strong>GRE</strong> 324/340+3.5/6.0 (Verbal:154 Quantitive:170 Analytical Writing:3.5) -->
