Update url to CV

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 									<h2>Bai Liu (刘柏)</h2>
 									<p>
 										<a>bailiu [at] mit.edu</a> &nbsp 
-										<a href="files/CV_BaiLiu.pdf"><font color="3498DB">[CV]</font></a> &nbsp 
+										<a href="files/BaiLiu_CV.pdf"><font color="3498DB">[CV]</font></a> &nbsp 
 										<a href="https://www.linkedin.com/in/bai-liu/"><font color="3498DB">[LinkedIn]</font></a> &nbsp 
 										<a href="https://github.com/bailiumit"><font color="3498DB">[GitHub]</font></a> &nbsp 
 									</p>									
