Update CV & trim website contents

--- a/index.html
+++ b/index.html
@@ -77,8 +77,6 @@
 								<p>I am currently a Ph.D. candidate in <a href="https://lids.mit.edu"><font color="3498DB">Laboratory for Information and Decision Systems (LIDS)</font></a>, <a href="http://web.mit.edu"><font color="3498DB">Massachusetts Institute of Technology</font></a>, advised by Prof. <a href="https://modiano.mit.edu"><font color="3498DB">Eytan Modiano</font></a>. </p>
 
 								<p>My research interests lie in learning and control problems in networked systems (data networks, logistic networks etc.), with application of reinforcement learning, stochastic optimization, inference methods.</p>
-
-								<p>Previously, in Summer 2016, I was selected into <a href="https://engineering.stanford.edu/students/programs/global-engineering-programs/chinese-ugvr"><font color="3498DB">Stanford UGVR program</font></a> and worked as a research assistant in <a href="http://isl.stanford.edu"><font color="3498DB">Information Systems Laboratory</font></a>, advised by Prof. <a href="http://web.stanford.edu/~aozgur/"><font color="3498DB">Ayfer Özgür</font></a>. In Spring 2016, I visited <a href="http://www.imperial.ac.uk"><font color="3498DB">Imperial College London</font></a> and worked at <a href="http://www.imperial.ac.uk/transport-studies/"><font color="3498DB">Centre for Transport Studies</font></a>, advised by Prof. <a href="http://www.imperial.ac.uk/people/k.han"><font color="3498DB">Ke Han</font></a>. In 2016, I worked at <a href="http://iiis.tsinghua.edu.cn/en/"><font color="3498DB">Institute for Interdisciplinary Information Sciences</font></a>, advised by Prof. <a href="http://iiis.tsinghua.edu.cn/~huang/"><font color="3498DB">Longbo Huang</font></a>. In 2015, I worked in <a href="http://www.au.tsinghua.edu.cn/publish/auen/1344/index.html"><font color="3498DB">Institute of System Engineering</font></a>, advised by Prof. <a href="http://www.tsinghua.edu.cn/publish/auen/1713/2011/20111107134223455368964/20111107134223455368964_.html"><font color="3498DB">Jianming Hu</font></a>.  </p>
 							</div>
 						</section>
 
@@ -88,8 +86,8 @@
 								<h3>Publications</h3>
 								<h4>Paper</h4>
 									<ul>
+										<li><strong>Bai Liu</strong>, Qiaomin Xie, and Eytan Modiano. RL-QN: A Reinforcement Learning Framework for Optimal Control of Queueing Systems <i>ACM Transactions on Modeling and Performance Evaluation of Computing Systems</i>, Submitted.</li>
 										<li><strong>Bai Liu</strong>, Qiaomin Xie, and Eytan Modiano. Reinforcement Learning for Optimal Control of Queueing Systems. <i>57th Annual Allerton Conference on Communication, Control, and Computing</i>, September 2019.</li>
-										<li><strong>Bai Liu</strong>, Xiugang Wu, and Ayfer Özgür. Efficiently Reaching the Largest Wireless Capacity with the Fewest Relays. Presented at <i>Stanford UGVR Program Workshop</i>, August 2016. &nbsp <a href="files/BaiLiu_UGVR_Poster.pdf"><font color="3498DB">[Poster]</font></a></li>
 										<li><strong>Bai Liu</strong>, Ke Han, and Jianming Hu. Global Optimization Framework for Real-time Route Guidance via Variable Message Sign, May 2016. &nbsp <a href="http://arxiv.org/abs/1611.08343"><font color="3498DB">[arXiv]</font></a></li>  
 									</ul>
 								<h4>Patent</h4>
@@ -144,19 +142,6 @@
 										</div>
 									</article>
 								</div>
-							</div>
-						</section>
-
-					<!-- Skills -->
-						<section id="Skills">
-							<div class="container">
-								<h3>Skills</h3>
-								<ul>
-								<i class="fa fa-code fa-2x fa-fw"></i> &nbsp Python &nbsp MATLAB &nbsp C/C++ &nbsp Wolfram
-								<br><i class="fa fa-wrench fa-2x fa-fw"></i> &nbsp LaTeX &nbsp Git &nbsp SQL &nbsp Oracle
-<!-- 								<br><i class="fa fa-paint-brush fa-2x fa-fw"></i> &nbsp <strong>TOEFL iBT</strong> 107/120 (Reading:30 Listening:28 Speaking:23 Writing:26)
-								<br><i class="fa fa-pencil fa-2x fa-fw"></i> &nbsp <strong>GRE</strong> 324/340+3.5/6.0 (Verbal:154 Quantitive:170 Analytical Writing:3.5) -->
-								</ul>
 							</div>
 						</section>
 
