--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 								<h3>Publications</h3>
 								<h4>Paper</h4>
 									<ul>
-										<li><strong>Bai Liu</strong>, Qiaomin Xie, and Eytan Modiano. RL-QN: A Reinforcement Learning Framework for Optimal Control of Queueing Systems <i>ACM Transactions on Modeling and Performance Evaluation of Computing Systems</i>, Submitted. &nbsp <a href="https://arxiv.org/abs/2011.07401"><font color="3498DB">[arXiv]</font></a></li>  
+										<li><strong>Bai Liu</strong>, Qiaomin Xie, and Eytan Modiano. RL-QN: A Reinforcement Learning Framework for Optimal Control of Queueing Systems. <i>ACM Transactions on Modeling and Performance Evaluation of Computing Systems</i>. Submitted. &nbsp <a href="https://arxiv.org/abs/2011.07401"><font color="3498DB">[arXiv]</font></a></li>  
 										<li><strong>Bai Liu</strong>, Qiaomin Xie, and Eytan Modiano. Reinforcement Learning for Optimal Control of Queueing Systems. <i>57th Annual Allerton Conference on Communication, Control, and Computing</i>, September 2019.</li>
 										<li><strong>Bai Liu</strong>, Ke Han, and Jianming Hu. Global Optimization Framework for Real-time Route Guidance via Variable Message Sign, May 2016. &nbsp <a href="http://arxiv.org/abs/1611.08343"><font color="3498DB">[arXiv]</font></a></li>  
 									</ul>
