--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 								</header>
 								<p>I am currently a Ph.D. candidate in <a href="https://lids.mit.edu"><font color="3498DB">Laboratory for Information and Decision Systems (LIDS)</font></a>, <a href="http://web.mit.edu"><font color="3498DB">Massachusetts Institute of Technology</font></a>, advised by Prof. <a href="https://modiano.mit.edu"><font color="3498DB">Eytan Modiano</font></a>. </p>
 
-								<p>My research interests lie in learning and control problems in networked systems (data networks, logistic networks etc.), with application of reinforcement learning, stochastic optimization, inference methods.</p>
+								<p>My research interests lie in learning and control problems in network systems, with application of optimization, machine learning and inference methods.</p>
 							</div>
 						</section>
 
@@ -86,9 +86,11 @@
 								<h3>Publications</h3>
 								<h4>Paper</h4>
 									<ul>
-										<li><strong>Bai Liu</strong>, Qiaomin Xie, and Eytan Modiano. RL-QN: A Reinforcement Learning Framework for Optimal Control of Queueing Systems. <i>ACM Transactions on Modeling and Performance Evaluation of Computing Systems</i>. Submitted. &nbsp <a href="https://arxiv.org/abs/2011.07401"><font color="3498DB">[arXiv]</font></a></li>  
+										<li><strong>Bai Liu</strong>, and Eytan Modiano. Tracking MaxWeight*: Optimal Control for Partially Observable and Controllable Networks. <i>IEEE/ACM Transactions on Networking.</i> Submitted.</a></li>
+										<li><strong>Bai Liu</strong>, Qiaomin Xie, and Eytan Modiano. RL-QN: A Reinforcement Learning Framework for Optimal Control of Queueing Systems. <i>ACM Transactions on Modeling and Performance Evaluation of Computing Systems</i>. Submitted. &nbsp <a href="https://arxiv.org/abs/2011.07401"><font color="3498DB">[arXiv]</font></a></li>
+										<li><strong>Bai Liu</strong>, and Eytan Modiano. Optimal Control for Networks with Unobservable Malicious Nodes. <i>Performance Evaluation</i>, to appear on November 2021</a></li>  
 										<li><strong>Bai Liu</strong>, Qiaomin Xie, and Eytan Modiano. Reinforcement Learning for Optimal Control of Queueing Systems. <i>57th Annual Allerton Conference on Communication, Control, and Computing</i>, September 2019.</li>
-										<li><strong>Bai Liu</strong>, Ke Han, and Jianming Hu. Global Optimization Framework for Real-time Route Guidance via Variable Message Sign, May 2016. &nbsp <a href="http://arxiv.org/abs/1611.08343"><font color="3498DB">[arXiv]</font></a></li>  
+										<li><strong>Bai Liu</strong>, Ke Han, and Jianming Hu. Global Optimization Framework for Real-time Route Guidance via Variable Message Sign. &nbsp <a href="http://arxiv.org/abs/1611.08343"><font color="3498DB">[arXiv]</font></a></li>  
 									</ul>
 								<h4>Patent</h4>
 									<ul>
@@ -107,36 +109,33 @@
 								<h3>Selected Research Projects</h3>
 								<div class="features">
 									<article>
-										<a href="#" class="image"><img src="images/RL_Research.png" alt="" /></a>
+										<a href="#" class="image"><img src="images/Tracking_Adversarial.png" alt="" /></a>
+										<div class="inner">
+											<h4>Optimal Control for Networks with Unobservable Malicious Nodes</a>
+											</h4>
+											<p>Modern network systems often offer limited access and suffer from adversarial attacks. In this project, we focus on networks with unobservable malicious nodes, where the network dynamics, such as external arrivals and control actions of malicious nodes can be adversarial.</p>
+										</div>
+									</article>
+									<article>
+										<a href="#" class="image"><img src="images/Tracking_Stochastic.png" alt="" /></a>
+										<div class="inner">
+											<h4>Optimal Control for Partially Observable and Controllable Networks</a>
+											</h4>
+											<p>Modern networks are complex and may include components that cannot be fully controlled or observed. We propose a control algorithm for such overlay-underlay networks where the network controller can only observe and operate on overlay nodes, and the underlay nodes are neither observable nor controllable.</p>
+										</div>
+									</article>
+									<article>
+										<a href="#" class="image"><img src="images/RLQN.png" alt="" /></a>
 										<div class="inner">
 											<h4>Reinforcement Learning in Network Control &nbsp <a href="https://arxiv.org/abs/2011.07401"><font color="3498DB">[arXiv]</font></a>
-												<h5>Bai Liu, 
-													<a href="https://sites.google.com/site/qiaominxie/"><font color="3498DB">Qiaomin Xie</font></a>, 
-													<a href="https://modiano.mit.edu"><font color="3498DB">Eytan Modiano</font></a>
-												</h5>
 											</h4>
-											<p>By applying model-based reinforcement learning and Lyapunov analysis, we designe an algorithm for queueing networks with unbounded state spaces. We prove that under our algorithm, the average queue backlog can get arbitrarily close to the optimal result.</p>
+											<p>By applying model-based reinforcement learning and Lyapunov analysis, we design an algorithm for queueing networks with unbounded state spaces. We prove that under our algorithm, the average queue backlog can get arbitrarily close to the optimal result.</p>
 										</div>
 									</article>
 									<article>
-										<a href="files/BaiLiu_UGVR_Poster.pdf" class="image"><img src="images/Stanford_Research.png" alt="" /></a>
-										<div class="inner">
-											<h4>Subnetwork Selection of Gaussian Relay Network &nbsp <a href="files/BaiLiu_UGVR_Poster.pdf"><font color="3498DB">[Poster]</font></a>
-												<h5>Bai Liu,  
-													<a href="https://www.eecis.udel.edu/~xwu/"><font color="3498DB">Xiugang Wu</font></a>, 
-													<a href="http://web.stanford.edu/~aozgur/"><font color="3498DB">Ayfer Özgür</font></a>
-												</h5>
-											</h4> 
-											<p>In wireless communication, some relays can be turned off while the optimal capacity still holds. We can apply traversing search approach to find the trimmed network, but its time cost might be unbearable. To solve the problem, we thoroughly study and rigorously prove properties of layered Gaussian relay network. We then develop and implement an algorithm that can find optimal global subnetwork exponentially faster.</p>
-										</div>
-									</article>
-									<article>
-										<a href="http://arxiv.org/abs/1611.08343" class="image"><img src="images/ICL_Research.jpg" alt="" /></a>
+										<a href="http://arxiv.org/abs/1611.08343" class="image"><img src="images/Traffic.jpg" alt="" /></a>
 										<div class="inner">
 											<h4>Dynamic Transportation Network Modeling &nbsp <a href="http://arxiv.org/abs/1611.08343"><font color="3498DB">[arXiv]</font></a>
-												<h5>Bai Liu, 
-													<a href="http://www.imperial.ac.uk/people/k.han"><font color="3498DB">Ke Han</font></a>
-												</h5>
 											</h4>
 											<p>Aiming at improving VMS (variable message sign) display strategy, we formulate transportation network model with feedback scheme. We then design optimization algorithm with linear decision rule and heuristic optimization approach. A simulation case study is conducted on a real-world test network in China, which shows the advantage of the proposed adaptive VMS display strategy.</p>
 										</div>
@@ -151,7 +150,7 @@
 				<section id="footer">
 					<div class="container">
 						<ul class="copyright">
-							<li>&copy; Bai Liu 2016</li>
+							<li>&copy; Bai Liu 2021</li>
 						</ul>
 					</div>
 				</section>
