--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 								</header>
 								<p>I am currently a Ph.D. candidate in <a href="https://lids.mit.edu"><font color="3498DB">Laboratory for Information and Decision Systems (LIDS)</font></a>, <a href="http://web.mit.edu"><font color="3498DB">Massachusetts Institute of Technology</font></a>, advised by Prof. <a href="https://modiano.mit.edu"><font color="3498DB">Eytan Modiano</font></a>. </p>
 
-								<p>My research interests lie in learning and control problems in network systems, with application of optimization, machine learning and inference methods.</p>
+								<p>My research focuses on designing practical algorithms to solve the learning and control problems in network systems, with the application of optimization, machine learning and inference methods.</p>
 							</div>
 						</section>
 
