--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
 								<p>I am currently a Ph.D. candidate in <a href="https://lids.mit.edu"><font color="3498DB">Laboratory for Information and Decision Systems (LIDS)</font></a>, <a href="http://web.mit.edu"><font color="3498DB">Massachusetts Institute of Technology</font></a>, advised by Prof. <a href="https://modiano.mit.edu"><font color="3498DB">Eytan Modiano</font></a>. </p>
 
 								<p>My research focuses on designing practical algorithms to solve the learning and control problems in network systems, with the application of optimization, machine learning and inference methods.</p>
+
+								<p>My current expected graduation time is <strong>December 2022</strong>. I am actively looking for full-time jobs related to cloud networks, recommendation systems, operation research, etc.</p>
 							</div>
 						</section>
 
@@ -86,9 +88,10 @@
 								<h3>Publications</h3>
 								<h4>Paper</h4>
 									<ul>
-										<li><strong>Bai Liu</strong>, and Eytan Modiano. Tracking MaxWeight*: Optimal Control for Partially Observable and Controllable Networks. <i>IEEE/ACM Transactions on Networking.</i> Submitted.</a></li>
-										<li><strong>Bai Liu</strong>, Qiaomin Xie, and Eytan Modiano. RL-QN: A Reinforcement Learning Framework for Optimal Control of Queueing Systems. <i>ACM Transactions on Modeling and Performance Evaluation of Computing Systems</i>. Submitted. &nbsp <a href="https://arxiv.org/abs/2011.07401"><font color="3498DB">[arXiv]</font></a></li>
-										<li><strong>Bai Liu</strong>, and Eytan Modiano. Optimal Control for Networks with Unobservable Malicious Nodes. <i>Performance Evaluation</i>, to appear on November 2021</a></li>  
+										<li><strong>Bai Liu</strong>, and Eytan Modiano. Tracking MaxWeight*: Optimal Control for Partially Observable and Controllable Networks. <i>IEEE/ACM Transactions on Networking.</i> Under Review.</a></li>
+										<li><strong>Bai Liu</strong>, and Eytan Modiano. Universal Policy Tracking: Scheduling for Wireless Networks with Delayed State Observation. <i>58th Annual Allerton Conference on Communication, Control, and Computing</i>, September 2022.</li>
+										<li><strong>Bai Liu</strong>, Qiaomin Xie, and Eytan Modiano. RL-QN: A Reinforcement Learning Framework for Optimal Control of Queueing Systems. <i>ACM Transactions on Modeling and Performance Evaluation of Computing Systems</i>. April 2022. &nbsp <a href="https://arxiv.org/abs/2011.07401"><font color="3498DB">[arXiv]</font></a></li>
+										<li><strong>Bai Liu</strong>, and Eytan Modiano. Optimal Control for Networks with Unobservable Malicious Nodes. <i>Performance Evaluation</i>, November 2021</a></li>  
 										<li><strong>Bai Liu</strong>, Qiaomin Xie, and Eytan Modiano. Reinforcement Learning for Optimal Control of Queueing Systems. <i>57th Annual Allerton Conference on Communication, Control, and Computing</i>, September 2019.</li>
 										<li><strong>Bai Liu</strong>, Ke Han, and Jianming Hu. Global Optimization Framework for Real-time Route Guidance via Variable Message Sign. &nbsp <a href="http://arxiv.org/abs/1611.08343"><font color="3498DB">[arXiv]</font></a></li>  
 									</ul>
